# Carvera_Controller

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  buildozer.spec  inside-corner-settings.json  outside-corner-settings.json  pyproject.toml  single-axis-probe-settings.json
.github/actions/bootstrap-poetry/: action.yaml
.github/workflows/: release.yaml
assets/design/ProbingGraphics/: ProbingGraphics.afdesign
assets/design/background_images/: README.md
carveracontroller/: CNC.py  Controller.py  GCodeParser.py  GcodeViewer.py  Objloader.py  Tooltips.kv  Tooltips.py  USBStream.py  Utils.py  WIFIStream.py  XMODEM.py  __init__.py  __main__.py  config_c1.json  config_ca1.json  controller_config.json  gcode_viewer_config.json  main.py  makera.kv  pendant_config.json  serial_listeners.py  test_gcode_parser.py  ui.py
carveracontroller/addons/TabInputFields/: TabTextInput.py
carveracontroller/addons/facing/: FacingWizardPopup.kv  FacingWizardPopup.py  __init__.py  facing_gcode.py  facing_presets.py  facing_preview_sketch.py  facing_wizard_defaults.py  probe_grid_gcode.py  stock_geometry.py
carveracontroller/addons/pendant/: __init__.py  gamepad.py  pendant.py  sdl_joystick_hotplug.py  whb04.py
carveracontroller/addons/probe_scan/: ProbeScanPopup.kv  ProbeScanPopup.py  __init__.py  construction_geom.py  coordinate_transform.py  export_format.py  feature_resolve.py  gcode_builders.py  gcode_m118.py  m118_capture.py  scan_preview_sketch.py  session.py
carveracontroller/addons/probing/: ProbeGcodeGenerator.py  Probing.py  ProbingConstants.py  ProbingControls.kv  ProbingControls.py  ProbingPopup.bu  ProbingPopup.kv  ProbingPopup.kv-bu  ProbingPopup.py  ProbingPreview.py  ProbingPreviewAndRunPopup.kv  ProbingPreviewAndRunPopup.py
carveracontroller/addons/probing/Tabs/: BoreBossTab.kv  CornersTab.kv  MiscTab.kv  ProbeSettingsTab.kv  ProbingTabs.kv  SingleAxisTab.kv
carveracontroller/addons/probing/operations/: ConfigUtils.py  OperationsBase.py
carveracontroller/addons/probing/operations/Angle/: AngleParameterDefinitions.py  AngleSettings.kv  AngleSettings.py
carveracontroller/addons/probing/operations/Bore/: BoreParameterDefinitions.py  BoreSettings.kv  BoreSettings.py
carveracontroller/addons/probing/operations/Boss/: BossParameterDefinitions.py  BossSettings.kv  BossSettings.py
carveracontroller/addons/probing/operations/Calibration/: CalibrationOperation.py  CalibrationParameterDefinitions.py  CalibrationSettings.kv  CalibrationSettings.py
carveracontroller/addons/probing/operations/FourthAxis/: FourthAxisOperation.py  FourthAxisOperationType.py  FourthAxisParameterDefinitions.py  FourthAxisSettings.kv  FourthAxisSettings.py
carveracontroller/addons/probing/operations/InsideCorner/: InsideCornerOperation.py  InsideCornerOperationType.py  InsideCornerParameterDefinitions.py  InsideCornerSettings.kv  InsideCornerSettings.py
carveracontroller/addons/probing/operations/OutsideCorner/: OutsideCornerOperation.py  OutsideCornerOperationType.py  OutsideCornerParameterDefinitions.py  OutsideCornerSettings.kv  OutsideCornerSettings.py
carveracontroller/addons/probing/operations/ProbeTip/: ProbeTipSettings.kv  ProbeTipSettings.py
carveracontroller/addons/probing/operations/SingleAxis/: SingleAxisProbeParameterDefinitions.py  SingleAxisProbeSettings.kv  SingleAxisProbeSettings.py
carveracontroller/addons/probing/preview/: ProbingPreviewPopup.kv  ProbingPreviewPopup.py
carveracontroller/addons/tooltips/: Tooltips.kv  Tooltips.py
carveracontroller/locales/en/LC_MESSAGES/: en.po
carveracontroller/locales/zh-CN/LC_MESSAGES/: zh-CN.po
carveracontroller/screens/: ProbingPopup.kv
carveracontroller/ui/: graph_widget_twinx.py
docs/: ProbingCalibrationGraphics.afdesign  ProbingGraphics.afdesign
packaging_assets/: AppImageBuilder.yml
packaging_assets/android/recipes/pyquicklz/: __init__.py
packaging_assets/ios/carveracontroller-ios/CarveraController.xcodeproj/: project.pbxproj
scripts/: build.py  build_ios.sh  create-dmg.sh  install_linux_prereqs.sh  rename-release-file.sh  update_translations.py
tests/: conftest.py
tests/integration/: conftest.py  test_visual_regression.py
tests/resources/: Face 4x4 stock.cnc
tests/unit/: conftest.py  test_settings_persistence.py
